added js files and html files for 2ndhand products, got help on API call from teacher, wrote functions for reneding single game data and added logic for displaying all 2ndhand games

--- a/second-hand-games.html
+++ b/second-hand-games.html
@@ -57,19 +57,19 @@
                         releases</a></li>
                 <li class="nav-gamespage"><a href="games.html" class="nav-gamespage text-topbar-games-page">Specials</a>
                 </li>
-                <li class="nav-gamespage"><a href="second-hand-games.html"
+                <li class="nav-gamespage"><a href="games.html"
                         class="nav-gamespage text-topbar-games-page">Second-hand</a></li>
             </nav>
         </section>
 
         <section class="h1heading-gamespage">
-            <h1>Our games:</h1>
+            <h1>Our second-hand games:</h1>
         </section>
 
 
-        <div class="container-games-page"> </div>
+        <div class="container-second-hands-games-page"> </div>
         <div class="message-container"></div>
-
+    
 
     </main>
     <footer>
@@ -110,11 +110,10 @@
 
         </section>
     </footer>
-    <script type="module" src="js/listOfProducsPage.js"></script>
+
+    <script type="module" src="js/listofSecondHandGames.js"></script>
     <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
-</body>
-
 </body>
 
 </html>
