--- a/about.html
+++ b/about.html
@@ -13,17 +13,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <!-- Hotjar Tracking Code for https://gamehub-interaction-design.netlify.app/ -->
-    <script>
-        (function (h, o, t, j, a, r) {
-            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-            h._hjSettings = { hjid: 5148539, hjsv: 6 };
-            a = o.getElementsByTagName('head')[0];
-            r = o.createElement('script'); r.async = 1;
-            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-    </script>
 </head>
 
 <body>
@@ -111,8 +100,10 @@
 
         </section>
     </footer>
+    <script type="module" src="js/script.js"></script>
     <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
+    
 </body>
 
 </html>
