updated js functions for creating HTML on second-hand games page. Renamed script file.

--- a/games.html
+++ b/games.html
@@ -52,11 +52,7 @@
         <section>
             <nav class="links-topbar-gamespage">
                 <li class="nav-gamespage"><a href="games.html"
-                        class="nav-gamespage text-topbar-games-page">Bestsellers</a></li>
-                <li class="nav-gamespage"><a href="games.html" class="nav-gamespage text-topbar-games-page">New
-                        releases</a></li>
-                <li class="nav-gamespage"><a href="games.html" class="nav-gamespage text-topbar-games-page">Specials</a>
-                </li>
+                        class="nav-gamespage text-topbar-games-page">New Games</a></li>
                 <li class="nav-gamespage"><a href="second-hand-games.html"
                         class="nav-gamespage text-topbar-games-page">Second-hand</a></li>
             </nav>
