--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
     </header>
     <main>
         <section class="h1heading topbar-about">
+        <a id="back-link">back</a>
             <h1>About</h1>
         </section>
         <Section class="container-about">
@@ -103,6 +104,7 @@
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
+    <script type="module" src="js/back-link.js"></script>
     
 </body>
 
