--- a/second-hand-games.html
+++ b/second-hand-games.html
@@ -52,11 +52,7 @@
         <section>
             <nav class="links-topbar-gamespage">
                 <li class="nav-gamespage"><a href="games.html"
-                        class="nav-gamespage text-topbar-games-page">Bestsellers</a></li>
-                <li class="nav-gamespage"><a href="games.html" class="nav-gamespage text-topbar-games-page">New
-                        releases</a></li>
-                <li class="nav-gamespage"><a href="games.html" class="nav-gamespage text-topbar-games-page">Specials</a>
-                </li>
+                        class="nav-gamespage text-topbar-games-page">New Games</a></li>
                 <li class="nav-gamespage"><a href="games.html"
                         class="nav-gamespage text-topbar-games-page">Second-hand</a></li>
             </nav>
@@ -67,7 +63,8 @@
         </section>
 
 
-        <div class="container-second-hands-games-page"> </div>
+        <div class="container-second-hand-games-page"></div>
+        <div class="testing-container"></div>
         <div class="message-container"></div>
     
 
