changed <section> to <div> and removed excess and wrongfull html code

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <section class="header-flex-conatainer">
+        <div class="header-flex-conatainer">
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars fa-2xl"></i></label>
             <nav>
@@ -39,15 +39,15 @@
             </div>
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
             </div>
-        </section>
+        </div>
     </header>
     <main>
-        <section class="h1heading topbar-about">
+        <div class="h1heading topbar-about">
         <a id="back-link">back</a>
             <h1>About</h1>
-        </section>
-        <Section class="container-about">
-            <section id="about-info-text">
+        </div>
+        <div class="container-about">
+            <div id="about-info-text">
                 <p>We are an online shop where gamers of all kinds can purchase computer games. GameHub lets you buy
                     tons of video games online for any device. </p>
                 <p>We believe that gaming should be affordable for all, therefore we have created an online marketplace
@@ -55,33 +55,33 @@
                     can find games that are reasonably priced and we offer a huge range of games.</p>
                 <p>Looking to sell a game that you have finished playing? Then this is also the site for you! Here you
                     can sell your pre-used games and you keep the money you make from the sale.</p>
-            </section>
+            </div>
 
-            <section>
+            <div>
                 <img src="images/mangamingsmalll.jpg" alt="Man playing a video game on a TV" class="about-image">
-            </section>
-        </Section>
+            </div>
+        </div>
     </main>
 
     <footer>
-        <section class="contact-info-footer">
-            <Section class="contact-text-footer">
-                <Section class="info-footer">
+        <div class="contact-info-footer">
+            <div class="contact-text-footer">
+                <div class="info-footer">
                     <p class="text-footer">Address:</p>
                     <p class="text-footer">1234 Street,Town </p>
                     <p class="text-footer">State, 09765, Country</p>
-                </Section>
-                <Section class="info-footer">
+                </div>
+                <div class="info-footer">
                     <p class="text-footer">Email:</p>
                     <p class="text-footer">post@gamehub.com</p>
-                </Section>
-                <Section class="info-footer">
+                </div>
+                <div class="info-footer">
                     <p class="text-footer">Phone:</p>
                     <p class="text-footer">09645725</p>
-                </Section>
-            </Section>
+                </div>
+            </div>
 
-            <section class="social-media">
+            <div class="social-media">
                 <nav class="footer-social">
                     <ul>
                         <li><a href="contact.html"><i class="fa-solid fa-video fa-2xl icon-footer"></i></a></li>
@@ -89,19 +89,19 @@
                         <li><a href="contact.html"><i class="fa-brands fa-instagram fa-2xl icon-footer"></i></a></li>
                     </ul>
                 </nav>
-            </section>
+            </div>
 
-            <section class="newsletter">
+            <div class="newsletter">
                 <form action="FORM">
                     <input type="email" name="newsletter" id="newsletter" placeholder="Join our newsletter!"
                         class="input-newsletter">
                     <a href="contact.html" class="cta-input-footer">Submit</a>
                 </form>
-            </section>
+            </div>
 
         </section>
     </footer>
-    <script type="module" src="js/script.js"></script>
+
     <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
     <script type="module" src="js/back-link.js"></script>
