--- a/product-page-second-hand.html
+++ b/product-page-second-hand.html
@@ -19,7 +19,7 @@
 
   <body>
     <header>
-      <section class="header-flex-conatainer">
+      <div class="header-flex-conatainer">
         <input type="checkbox" id="menu-checkbox" />
         <label for="menu-checkbox" class="hamburger-icon"
           ><i class="fas fa-bars fa-2xl"></i
@@ -54,7 +54,7 @@
         <a href=" contact.html"
           ><i class="fa-regular fa-user fa-xl icon-user"></i
         ></a>
-      </section>
+      </div>
     </header>
     <main>
       <div id="game-header-second-hand"></div>
@@ -62,24 +62,24 @@
       <div class="message-container"></div>
     </main>
     <footer>
-      <section class="contact-info-footer">
-        <section class="contact-text-footer">
-          <section class="info-footer">
+      <div class="contact-info-footer">
+        <div class="contact-text-footer">
+          <div class="info-footer">
             <p class="text-footer">Address:</p>
             <p class="text-footer">1234 Street,Town</p>
             <p class="text-footer">State, 09765, Country</p>
-          </section>
-          <section class="info-footer">
+          </div>
+          <div class="info-footer">
             <p class="text-footer">Email:</p>
             <p class="text-footer">post@gamehub.com</p>
-          </section>
-          <section class="info-footer">
+          </div>
+          <div class="info-footer">
             <p class="text-footer">Phone:</p>
             <p class="text-footer">09645725</p>
-          </section>
-        </section>
+          </div>
+        </div>
 
-        <section class="social-media">
+        <div class="social-media">
           <nav class="footer-social">
             <ul>
               <li>
@@ -99,9 +99,9 @@
               </li>
             </ul>
           </nav>
-        </section>
+        </div>
 
-        <section class="newsletter">
+        <div class="newsletter">
           <form action="FORM">
             <input
               type="email"
@@ -112,8 +112,8 @@
             />
             <a href="contact.html" class="cta-input-footer">Submit</a>
           </form>
-        </section>
-      </section>
+        </div>
+      </div>
     </footer>
     <script type="module" src="js/productPageSecondHand.js"></script>
     <script type="module" src="js/productPage.js"></script>
