--- a/checkout-page.html
+++ b/checkout-page.html
@@ -19,7 +19,7 @@
 
   <body>
     <header>
-      <section class="header-flex-conatainer">
+      <div class="header-flex-conatainer">
         <input type="checkbox" id="menu-checkbox" />
         <label for="menu-checkbox" class="hamburger-icon"
           ><i class="fas fa-bars fa-2xl"></i
@@ -54,16 +54,16 @@
         <a href="contact.html"
           ><i class="fa-regular fa-user fa-xl icon-user"></i
         ></a>
-      </section>
+      </div>
     </header>
 
     <main>
-      <section class="h1heading">
+      <div class="h1heading">
         <h1>Checkout</h1>
-      </section>
+      </div>
 
-      <section class="checkout-container">
-        <section class="checkout-forms checkout-containerthree">
+      <div class="checkout-container">
+        <div class="checkout-forms checkout-containerthree">
           <div>
             <h2 class="payment-info-header">Payment Information:</h2>
             <form action="POST">
@@ -125,7 +125,7 @@
               </div>
             </form>
           </div>
-        </section>
+        </div>
 
         <div class="customer-details checkout-containerone">
           <p class="header-customer-detail">Contact</p>
@@ -161,27 +161,27 @@
         </div>
 
         <div class="checkout-page"></div>
-      </section>
+      </div>
     </main>
     <footer>
-      <section class="contact-info-footer">
-        <section class="contact-text-footer">
-          <section class="info-footer">
+      <div class="contact-info-footer">
+        <div class="contact-text-footer">
+          <div class="info-footer">
             <p class="text-footer">Address:</p>
             <p class="text-footer">1234 Street,Town</p>
             <p class="text-footer">State, 09765, Country</p>
-          </section>
-          <section class="info-footer">
+          </div>
+          <div class="info-footer">
             <p class="text-footer">Email:</p>
             <p class="text-footer">post@gamehub.com</p>
-          </section>
-          <section class="info-footer">
+          </div>
+          <div class="info-footer">
             <p class="text-footer">Phone:</p>
             <p class="text-footer">09645725</p>
-          </section>
-        </section>
+          </div>
+        </div>
 
-        <section class="social-media">
+        <div class="social-media">
           <nav class="footer-social">
             <ul>
               <li>
@@ -201,9 +201,9 @@
               </li>
             </ul>
           </nav>
-        </section>
+        </div>
 
-        <section class="newsletter">
+        <div class="newsletter">
           <form action="FORM">
             <input
               type="email"
@@ -214,8 +214,8 @@
             />
             <a href="contact.html" class="cta-input-footer">Submit</a>
           </form>
-        </section>
-      </section>
+        </div>
+      </div>
     </footer>
 
     <script type="module" src="js/shoppingCart.js"></script>
