--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/site.webmanifest">
 <body>
     <header>
-        <section class="header-flex-conatainer">
+        <div class="header-flex-conatainer">
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars fa-2xl"></i></label>
             <nav>
@@ -36,24 +36,23 @@
                 </div>
             </div>
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
-            </div>
-        </section>
+        </div>
     </header>
     <main>
-        <section class="h1heading topbar-contactpage">
-            <section>
+        <div class="h1heading topbar-contactpage">
+            <div>
                 <h1>Contact us:</h1>
-            </section>
-            <section>
+            </div>
+            <div>
                 <img src="images/GameHub_Logo.png" alt="the logo for Gamehub" class="gameimage-contact">
-            </section>
-        </section>
+            </div>
+        </div>
 
         <p class="contact-info">Looking for help? Log in to your account to chat with our support staff. Or contact us
             via our contact form: </p>
 
-        <section class="form-contactpage">
-            <section id="log-in-form">
+        <div class="form-contactpage">
+            <div id="log-in-form">
                 <form action="POST">
                     <label for="username" class="contact-page">Username:</label>
                     <input type="text" name="username" id="username" class="username contact-input">
@@ -61,8 +60,8 @@
                     <input type="password" name="password" id="password" class="password contact-input">
                     <a href="contact.html" class="cta-login-contactpage">Log in</a>
                 </form>
-            </section>
-            <section id="contact-form">
+            </div>
+            <div id="contact-form">
                 <form action="POST">
                     <label for="full-name" class="contact_page">Full name:</label>
                     <input type="text" name="full-name" id="full-name" class="full-name contact-input">
@@ -72,55 +71,55 @@
                     <textarea id="message" name="message" rows="5" cols="30" class="contact-input"></textarea>
                     <a href="contact.html" class="cta-input-contactpage">Submit</a>
                 </form>
-            </section>
-        </section>
+            </div>
+        </div>
 
         <h3 class="direct-contact-header"> Or contact us directly:</h3>
-        <section class="container-direct-contact">
-            <section>
+        <div class="container-direct-contact">
+            <div>
                 <i class="fa-solid fa-location-dot fa-2xl direct-contact-icons"></i>
-            </section>
-            <section>
+            </div>
+            <div>
                 <i class="fa-solid fa-envelope fa-2xl direct-contact-icons"></i>
-            </section>
-            <section>
+            </div>
+            <div>
                 <i class="fa-solid fa-phone fa-2xl direct-contact-icons"></i>
-            </section>
-        </section>
-        <section class="container-direct-contact">
-            <section>
+            </div>
+        </div>
+        <div class="container-direct-contact">
+            <div>
                 <p>1234 Street
                     Town, State
                     09765
                     Country</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>post@gamehub.com</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>09645725</p>
-            </section>
-        </section>
+            </div>
+        </div>
     </main>
 
     <footer>
-        <section class="contact-info-footer">
-            <section class="contact-text-footer">
-                <section class="info-footer">
+        <div class="contact-info-footer">
+            <div class="contact-text-footer">
+                <div class="info-footer">
                     <p class="text-footer">Address:</p>
                     <p class="text-footer">1234 Street,Town </p>
                     <p class="text-footer">State, 09765, Country</p>
-                </section>
-                <section class="info-footer">
+                </div>
+                <div class="info-footer">
                     <p class="text-footer">Email:</p>
                     <p class="text-footer">post@gamehub.com</p>
-                </section>
-                <section class="info-footer">
+                </div>
+                <div class="info-footer">
                     <p class="text-footer">Phone:</p>
                     <p class="text-footer">09645725</p>
-                </section>
-            </section>
-            <section class="social-media">
+                </div>
+            </div>
+            <div class="social-media">
                 <nav class="footer-social">
                     <ul>
                         <li><a href="contact.html"><i class="fa-solid fa-video fa-2xl icon-footer"></i></a></li>
@@ -128,19 +127,17 @@
                         <li><a href="contact.html"><i class="fa-brands fa-instagram fa-2xl icon-footer"></i></a></li>
                     </ul>
                 </nav>
-            </section>
-            <section class="newsletter">
+            </div>
+            <div class="newsletter">
                 <form action="FORM">
                     <input type="email" name="newsletter" id="newsletter" placeholder="Join our newsletter!"
                         class="input-newsletter">
                     <a href="contact.html" class="cta-input-footer">Submit</a>
                 </form>
-            </section>
-        </section>
+            </div>
+        </div>
     </footer>
-
     <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
 </body>
-
 </html>
