updated code so that it does not display error messages unless there is an error, separated some code to also help with error handeling

--- a/checkout-page.html
+++ b/checkout-page.html
@@ -25,8 +25,8 @@
           ><i class="fas fa-bars fa-2xl"></i
         ></label>
         <nav>
-          <a href="index.html">Home</a>
-          <a href="games.html">Games</a>
+          <a href="/">Home</a>
+          <a href="games.html" class="active">Games</a>
           <a href="contact.html">Contact</a>
           <a href="about.html">About</a>
         </nav>
@@ -51,17 +51,15 @@
             `
           </div>
         </div>
-        <a href="contact.html"
+        <a href=" contact.html"
           ><i class="fa-regular fa-user fa-xl icon-user"></i
         ></a>
       </div>
     </header>
-
     <main>
       <div class="h1heading">
         <h1>Checkout</h1>
       </div>
-
       <div class="checkout-container">
         <div class="checkout-forms checkout-containerthree">
           <div>
@@ -126,20 +124,15 @@
             </form>
           </div>
         </div>
-
         <div class="customer-details checkout-containerone">
           <p class="header-customer-detail">Contact</p>
           <p>olanormann@gmail.com</p>
-
           <hr />
-
           <p class="header-customer-detail">Address</p>
           <p>Gammel gate 1</p>
           <p>01234 Oslo</p>
           <p>Norway</p>
-
           <hr />
-
           <p class="header-customer-detail">Shipping medthod</p>
           <p>Download</p>
         </div>
@@ -159,7 +152,6 @@
           </div>
           <div class="cart-container checkout-summary"></div>
         </div>
-
         <div class="checkout-page"></div>
       </div>
     </main>
@@ -217,8 +209,7 @@
         </div>
       </div>
     </footer>
-
     <script type="module" src="js/shoppingCart.js"></script>
-    <script type="module" src="js/productPage.js"></script>
+    <script type="module" src="js/previewCart.js"></script>
   </body>
 </html>
