--- a/games.html
+++ b/games.html
@@ -82,6 +82,7 @@
       </div>
       <div class="container-games-page"></div>
       <div class="message-container"></div>
+      <div class="game-information"></div>
     </main>
     <footer>
       <div class="contact-info-footer">
@@ -138,7 +139,6 @@
       </div>
     </footer>
     <script type="module" src="js/listOfProducsPage.js"></script>
-    <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
   </body>
 </html>
