--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
       <div class="container-index-games"></div>
       <div class="message-container"></div>
+      <div class="game-information"></div>
     </main>
 
     <footer>
@@ -136,7 +137,6 @@
     </footer>
 
     <script type="module" src="js/index.js"></script>
-    <script type="module" src="js/productPage.js"></script>
     <script type="module" src="js/previewCart.js"></script>
   </body>
 </html>
