--- a/product-page.html
+++ b/product-page.html
@@ -25,8 +25,8 @@
           ><i class="fas fa-bars fa-2xl"></i
         ></label>
         <nav>
-          <a href="index.html">Home</a>
-          <a href="games.html">Games</a>
+          <a href="/">Home</a>
+          <a href="games.html" class="active">Games</a>
           <a href="contact.html">Contact</a>
           <a href="about.html">About</a>
         </nav>
