working on adding used items to the cart, have managed to add them to cart, but not remove them yet

--- a/index.html
+++ b/index.html
@@ -65,14 +65,7 @@
           <i>The internet's leading site for new and second-hand games!</i>
         </p>
         <div class="first-section-homepage">
-          <div id="first-section-text">
-            <p>Looking for an action filled racing game?</p>
-            <p>Look no further!</p>
-            <p>
-              Try the new game
-              <a href="game_racing.html" class="game-link"><i> Racing</i>!</a>
-            </p>
-          </div>
+          <div id="first-section-text"></div>
         </div>
       </div>
 
