--- a/checkout-sucess.html
+++ b/checkout-sucess.html
@@ -26,11 +26,11 @@
         ></label>
         <nav>
           <a href="/">Home</a>
-          <a href="games.html" class="active">Games</a>
+          <a href="games.html">Games</a>
           <a href="contact.html">Contact</a>
           <a href="about.html">About</a>
         </nav>
-        <a href="index.html"
+        <a href="/"
           ><img
             src="images/GameHub_Logo.png"
             alt="gamehub logo"
