updated font size on h1, and links on games page

--- a/games.html
+++ b/games.html
@@ -62,7 +62,7 @@
         <h2 class="h2-item-topbar">Explore our categories:</h2>
       </div>
       <div>
-        <nav class="links-topbar-gamespage">
+        <div class="links-topbar-gamespage">
           <li class="nav-gamespage">
             <a href="games.html" class="nav-gamespage text-topbar-games-page"
               >New Games</a
@@ -75,7 +75,7 @@
               >Second-hand</a
             >
           </li>
-        </nav>
+        </div>
       </div>
       <div class="h1heading-gamespage">
         <h1>Our games:</h1>
